--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,9 @@ hermesEnabled=true
 # This allows your app to draw behind system bars for an immersive UI.
 # Note: Only works with ReactActivity and should not be used with custom Activity.
 edgeToEdgeEnabled=false
+
+# Release signing configuration
+MYAPP_RELEASE_STORE_FILE=my-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=my-key-alias
+MYAPP_RELEASE_STORE_PASSWORD=Prayag
+MYAPP_RELEASE_KEY_PASSWORD=Prayag
