--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-native": "0.82.1",
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native/new-app-screen": "0.82.1",
+    "i18next": "^25.7.2",
+    "react": "19.1.1",
+    "react-i18next": "^16.5.0",
+    "react-native": "0.82.1",
+    "react-native-maps": "^1.26.20",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -28,6 +33,7 @@
     "@react-native/typescript-config": "0.82.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
+    "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
