--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-i18next": "^16.5.0",
     "react-native": "0.82.1",
     "react-native-maps": "^1.26.20",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,6 +38,7 @@
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-native-maps": "^0.24.1",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
