--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native/new-app-screen": "0.82.1",
     "@react-navigation/bottom-tabs": "^7.8.12",
     "@react-navigation/native": "^7.1.25",
+    "@supabase/supabase-js": "^2.88.0",
     "i18next": "^25.7.2",
     "react": "19.1.1",
     "react-i18next": "^16.5.0",
@@ -23,6 +24,7 @@
     "react-native-maps": "^1.26.20",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-toast-message": "^2.3.3",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
