--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "start": "react-native start"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
@@ -38,15 +37,11 @@
     "@react-native/eslint-config": "0.82.1",
     "@react-native/metro-config": "0.82.1",
     "@react-native/typescript-config": "0.82.1",
-    "@types/jest": "^29.5.13",
     "@types/react": "^19.1.1",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-native-vector-icons": "^6.4.18",
-    "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
-    "jest": "^29.6.3",
     "prettier": "2.8.8",
-    "react-test-renderer": "19.1.1",
     "typescript": "^5.8.3"
   },
   "engines": {
